# winter

./: ASTNode.cpp  ASTNode.h  BaseException.h  BuiltInFunctionImpl.cpp  BuiltInFunctionImpl.h  CMakeLists.txt  CompiledValue.cpp  CompiledValue.h  FunctionSignature.cpp  FunctionSignature.h  FuzzTests.cpp  FuzzTests.h  GeneratedTokens.h  LICENCE  LLVMTypeUtils.cpp  LLVMTypeUtils.h  LLVMUtils.cpp  LLVMUtils.h  LangParser.cpp  LangParser.h  LanguageTestUtils.cpp  LanguageTestUtils.h  LanguageTests.cpp  LanguageTests.h  LanuageTests.cpp  LanuageTests.h  Lexer.cpp  Lexer.h  Linker.cpp  Linker.h  PerfTests.cpp  PerfTests.h  ProofUtils.cpp  ProofUtils.h  README.md  TestUtils.cpp  TestUtils.h  TokenBase.cpp  TokenBase.h  Type.cpp  (+61 more)
docs/: language_reference.md
indigo_core_code/indigo/: globals.h
vs2005/: winter.sln  winter.vcproj
vs2008/: winter.sln  winter.vcproj
vs2010/: winter.sln  winter.vcproj  winter.vcxproj  winter.vcxproj.filters
winter/: module.txt  winter.vcproj
winter/Debug/: BuildLog.htm
wntr/: ASTNode.cpp  ASTNode.h  GeneratedTokens.h  LangParser.cpp  LangParser.h  Lexer.cpp  Linker.cpp  Linker.h  TokenBase.cpp  TokenBase.h  Type.h  VMState.h  Value.h  winter.cpp
